--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="OTC">OTC</string>
+    <string name="siap_untuk_menjadi_medalist">Siap untuk menjadi medalist?</string>
+    <string name="masuk">Masuk</string>
+    <string name="belum_punya_akun_ayo_daftar">Belum punya akun? Ayo daftar</string>
 </resources>
