populate data from database to spinner in activity sign up and create new package (activity package) in main package

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="OTC">OTC</string>
     <string name="siap_untuk_menjadi_medalist">Siap untuk menjadi medalist?</string>
     <string name="masuk">Masuk</string>
-    <string name="belum_punya_akun_ayo_daftar">Belum punya akun? Ayo daftar!</string>
+    <string name="belum_punya_akun_ayo_daftar">Belum punya akun? Ayo, daftar!</string>
     <string name="alamat_email">Alamat Email</string>
     <string name="kata_sandi">Kata Sandi</string>
     <string name="lupa_kata_sandi">Lupa kata sandi?</string>
