handle invalid user inputs in activity sign up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
     <string name="pengguna_platform">Pengguna Platform</string>
     <string name="berlaku_efektif_sejak">Berlaku efektif sejak 1 Mei 2020</string>
+    <string name="anda_belum_menyetujui_syarat_dan_ketentuan_yang_berlaku">Anda belum menyetujui syarat dan ketentuan yang berlaku</string>
+    <string name="semua_kolom_yang_bukan_opsional_wajib_diisi">Semua kolom yang bukan "opsional" wajib diisi</string>
+    <string name="pilih_jenis_akun_dan_jenjang_akun_yang_valid">Pilih jenis akun dan jenjang akun yang valid</string>
     
     <string name="syarat_dan_ketentuan_pengguna_platform">Syarat dan Ketentuan ini merupakan perjanjian antara pengguna (“Anda”) dan OSN-Training Center (“Kami”), yaitu sebuah perusahaan yang didirikan dan beroperasi secara sah berdasarkan hukum Negara Republik Indonesia. Syarat dan Ketentuan ini mengatur Anda saat mengakses dan menggunakan aplikasi, situs web (www.elearningolimpiade.com dan situs web lain yang Kami kelola), fitur, teknologi, konten dan produk yang Kami sediakan (selanjutnya, secara Bersama-sama disebut sebagai “Platform”),
         \n\nHarap membaca Syarat dan Ketentuan ini secara seksama sebelum Anda mulai menggunakan Platform Kami, karena peraturan ini berlaku pada penggunaan Anda terhadap Platform Kami Syarat dan Ketentuan ini mencakup hal-hal sebagai berikut:
