--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="berlaku_efektif_sejak">Berlaku efektif sejak 1 Mei 2020</string>
     <string name="anda_belum_menyetujui_syarat_dan_ketentuan_yang_berlaku">Anda belum menyetujui syarat dan ketentuan yang berlaku</string>
     <string name="semua_kolom_yang_bukan_opsional_wajib_diisi">Semua kolom yang bukan "opsional" wajib diisi</string>
-    <string name="pilih_jenis_akun_dan_jenjang_akun_yang_valid">Pilih jenis akun dan jenjang akun yang valid</string>
+    <string name="pilih_jenis_akun_jenjang_akun_dan_bidang_yang_valid">Pilih jenis akun, jenjang akun, dan bidang yang valid</string>
     <string name="hanya_test">Hanya Test</string>
     <string name="cari">Cari</string>
     <string name="filter">Filter</string>
@@ -31,6 +31,11 @@
     <string name="sd">SD</string>
     <string name="smp">SMP</string>
     <string name="sma">SMA</string>
+    <string name="bidang">Bidang</string>
+    <string name="pilih_email_dan_password_yang_berbeda">Pilih email dan password yang berbeda</string>
+    <string name="selamat_datang">Selamat datang</string>
+    <string name="sedang_memproses">Sedang memproses</string>
+    <string name="mohon_tunggu">Mohon tunggu</string>
 
     <string name="syarat_dan_ketentuan_pengguna_platform">Syarat dan Ketentuan ini merupakan perjanjian antara pengguna (“Anda”) dan OSN-Training Center (“Kami”), yaitu sebuah perusahaan yang didirikan dan beroperasi secara sah berdasarkan hukum Negara Republik Indonesia. Syarat dan Ketentuan ini mengatur Anda saat mengakses dan menggunakan aplikasi, situs web (www.elearningolimpiade.com dan situs web lain yang Kami kelola), fitur, teknologi, konten dan produk yang Kami sediakan (selanjutnya, secara Bersama-sama disebut sebagai “Platform”),
         \n\nHarap membaca Syarat dan Ketentuan ini secara seksama sebelum Anda mulai menggunakan Platform Kami, karena peraturan ini berlaku pada penggunaan Anda terhadap Platform Kami Syarat dan Ketentuan ini mencakup hal-hal sebagai berikut:
