add value to user identity in activity home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
+
+    <string name="spinner">Spinner</string>
+    <string name="text_view">Text View</string>
+
     <string name="OTC">OTC</string>
     <string name="siap_untuk_menjadi_medalist">Siap untuk menjadi medalist?</string>
     <string name="masuk">Masuk</string>
