read available videos from each course from database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="email_dan_kata_sandi_tidak_tepat">Email dan kata sandi tidak tepat</string>
 
     <string name="video_pembelajaran">Video Pembelajaran</string>
+    <string name="provinsi">Provinsi</string>
 
 <!--    COMMANDS-->
 
