--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,9 @@
     <string name="sedang_memproses">Sedang memproses</string>
     <string name="mohon_tunggu">Mohon tunggu</string>
     <string name="email_dan_kata_sandi_tidak_tepat">Email dan kata sandi tidak tepat</string>
+    <string name="deskripsi">Deskripsi</string>
+    <string name="pertanyaan">Pertanyaan</string>
+    <string name="tulis_pertanyaan">Tulis pertanyaan</string>
 
     <string name="video_pembelajaran">Video Pembelajaran</string>
     <string name="provinsi">Provinsi</string>
